Update title bar image source to new URL

--- a/TRMNL/src/shared.liquid
+++ b/TRMNL/src/shared.liquid
@@ -31,7 +31,7 @@
 
 {% template title_bar %}
   <div class="title_bar">
-    <img class="image" src="https://trmnl.com/images/plugins/weather/wi-lightning.svg">
+    <img class="image" src="https://raw.githubusercontent.com/taichikuji/trmnl-frank-energie-plugin/refs/heads/main/TRMNL/media/icon.svg">
     <span class="title">Frank Energie</span>
     <span class="instance">{{ instance | default: "Energy Prices" }}</span>
   </div>
