--- a/TRMNL/src/half_vertical.liquid
+++ b/TRMNL/src/half_vertical.liquid
@@ -54,7 +54,7 @@
             <span class="value value--tnums value--small lg:value--base">{{ p_highest_total | round: 2 }}</span>
             <span class="label label--gray lg:label--large">€</span>
           </div>
-          <span class="label">{{ primary_label }} | Highest @ {{ p_highest.from | date: "%H:%M" }}</span>
+          <span class="label">Highest @ {{ p_highest.from | date: "%H:%M" }}</span>
         </div>
       </div>
       <div class="item item--emphasis-2">
@@ -64,7 +64,7 @@
             <span class="value value--tnums value--small lg:value--base">{{ p_lowest_total | round: 2 }}</span>
             <span class="label label--gray lg:label--large">€</span>
           </div>
-          <span class="label">{{ primary_label }} | Lowest @ {{ p_lowest.from | date: "%H:%M" }}</span>
+          <span class="label">Lowest @ {{ p_lowest.from | date: "%H:%M" }}</span>
         </div>
       </div>
       <div class="item item--emphasis-1">
@@ -74,7 +74,7 @@
             <span class="value value--tnums value--small lg:value--base">{{ p_current_total | round: 2 }}</span>
             <span class="label label--gray lg:label--large">€</span>
           </div>
-          <span class="label">{{ primary_label }} | Now @ {{ _cur_str }}</span>
+          <span class="label">Now @ {{ _cur_str }}</span>
         </div>
       </div>
     </div>
