Logo is now in-line instead of fetch remote svg URL

--- a/TRMNL/src/half_horizontal.liquid
+++ b/TRMNL/src/half_horizontal.liquid
@@ -137,4 +137,6 @@
 
 </div>
 {% render 'title_bar'
-  , instance: primary_label %}
+  , svg_logo: svg_logo 
+  , title: trmnl.plugin_settings.instance_name
+%}
