Revert removal instance value on title bar

--- a/TRMNL/src/full.liquid
+++ b/TRMNL/src/full.liquid
@@ -136,4 +136,4 @@
 {% render 'title_bar'
   , svg_logo: svg_logo 
   , title: trmnl.plugin_settings.instance_name
-%}
+  , instance: primary_label %}
