--- a/TRMNL/src/half_horizontal.liquid
+++ b/TRMNL/src/half_horizontal.liquid
@@ -139,4 +139,4 @@
 {% render 'title_bar'
   , svg_logo: svg_logo 
   , title: trmnl.plugin_settings.instance_name
-%}
+  , instance: primary_label %}
