--- a/TRMNL/src/half_vertical.liquid
+++ b/TRMNL/src/half_vertical.liquid
@@ -136,4 +136,4 @@
 {% render 'title_bar'
   , svg_logo: svg_logo 
   , title: trmnl.plugin_settings.instance_name
-%}
+  , instance: primary_label %}
